#fix #jsx #scss fixed input, remove scrollbar, div changed to buttons, made icons to center

--- a/src/pages/enrollment/enrollment.module.scss
+++ b/src/pages/enrollment/enrollment.module.scss
@@ -40,13 +40,23 @@
 
   &__input {
     outline: none;
+    width: 300px;
 
     &-wrap {
       border: 1px solid $primary;
 
-      & > * + * {
+      &>*+* {
         border-left: 1px solid $black;
       }
+    }
+  }
+
+  &__checkbox {
+    width: 230px;
+    align-items: center;
+
+    @media (max-width: 1630px) {
+      width: 131px;
     }
   }
 
